# walker

./: .env  .gitignore  README.md  README_WALKER.md  README_sales_query.md  demo_walker.py  gradio_app.py  pyproject.toml  test_integration.py  test_intent_fix.py  test_walker.py  test_walker_flow.py  test_walker_flow_mock.py
agents/: __init__.py  intent_parser.py  module_executor.py  summary_agent.py
core/: graph_builder.py  module_executor.py  router.py  walker.py  workflow.py
devlog/: BaseAnalysisModule小幅调整.md  BaseModule和config和子模块的关系.md  ModuleExcutor和分析子模块.md  README_NEW_MODULES.md  README_WALKER.md  api_key_issue_resolution.md  brand_model_test.py  debug_info_alignment_report.md  detailed_debug_info_enhancement_report.md  final_verification_summary.md  intent_optimization_report.md  intent_optimization_verification.md  intent_recognition_flow.md  optimization_summary.md  sales_query_module_analysis_report.md  sales_query_module_design.md  sales_query_module_fix_report.md  sales_query_module_guide.md  walker 的基本结构.md  workflow_analysis_report.md  workflow_execution_analysis_report.md  更多模板.md  自动验所有模块与数据库匹配情况.md
llm/: glm.py  prompts.py
modules/: __init__.py  analysis_config.json  base_module.py  data_describe_module.py  param_segmenter.py  run_data_describe.py  sales_query_module.py  trend_analysis.py  yoy_comparison.py
prepare/: database_schema.json  schema_scanner.py
test/: brand_model_test.py  comprehensive_final_test.py  comprehensive_test_report.md  debug_index_error.py  debug_parameter_extraction.py  debug_query_execution.py  debug_specific_models.py  debug_tesla_extraction.py  debug_zhiji_query.py  demo_ai_insights.py  demo_intent_architecture.py  demo_sales_query.py  demo_walker.py  end_to_end_test_report.md  final_validation.py  final_verification.py  gradio_integration_test_report.md  question_routing_report.md  test_ai_insights.py  test_api_key.py  test_base_module_database_awareness.py  test_comprehensive_model_queries.py  test_comprehensive_sales_query.py  test_csv_read.py  test_data_chat_system.py  test_debug_alignment.py  test_detailed_debug_info.py  test_duplicate_fix.py  test_end_to_end_sales_query.py  test_field_reading.py  test_final_fix.py  test_fix_validation.py  test_full_workflow.py  test_glm_parameter_extraction.py  test_gradio_integration.py  test_integration.py  test_intent_debug.py  test_intent_parser.py  test_model_sales_template.py  test_new_modules.py  (+9 more)
